fix(styles): remove headings text-wrap: balance

--- a/src/assets/global.scss
+++ b/src/assets/global.scss
@@ -55,9 +55,6 @@ ul {
   margin: 0;
   list-style: none;
 }
-h1, h2, h3, h4, h5, h6 {
-  text-wrap: balance;
-}
 p, li {
   text-wrap: pretty;
 }
